# lora-smith-qwen

./: .dockerignore  .env.example  .gitignore  Dockerfile  HF_README.md  Makefile  OLLAMA_README.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: train.yml
prompts/: prompts.yaml
src/: extract.py  merge.py  train.py
src/config/: settings.py
src/domain/: models.py
src/infrastructure/: wp_client.py
src/services/: formatter.py  generate_modelfile.py  html_cleaner.py  negative_generator.py
tests/: test_model.py  test_pipeline.py
