[project]
name = "lora-smith-qwen"
version = "0.1.0"
description = "Pipeline genérico de fine-tuning LoRA (Qwen3.5) a partir de artigos de help center WordPress"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "beautifulsoup4>=4.12.0",
    "huggingface-hub>=0.23.0",
    "rich>=13.7.0",
    "aiofiles>=23.2.0",
    "torch>=2.3.0",
    "transformers>=4.46.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "accelerate>=0.34.0",
    "datasets>=2.20.0",
    "gguf>=0.10.0",
    "psutil>=5.9.0",
    "bitsandbytes>=0.43.0; sys_platform == 'linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
